base/alb-service.yml
apiVersion: v1
kind: Service
metadata:
  name: test-nginx-service
  annotations:
    alb.ingress.kubernetes.io/healthcheck-path: "/"
spec:
  selector:
    app: default
  type: NodePort
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
